--- a/public-styled/advancements/rewards/chests/index.html
+++ b/public-styled/advancements/rewards/chests/index.html
@@ -446,13 +446,13 @@
     import { getFirestore, doc, getDoc, setDoc, onSnapshot, runTransaction, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-firestore.js";
 
     const firebaseConfig = {
-      apiKey: "PASTE_MAIN_SITE_API_KEY",
-      authDomain: "PASTE_MAIN_SITE_AUTH_DOMAIN",
-      projectId: "PASTE_MAIN_SITE_PROJECT_ID",
-      storageBucket: "PASTE_MAIN_SITE_STORAGE_BUCKET",
-      messagingSenderId: "PASTE_MAIN_SITE_SENDER_ID",
-      appId: "PASTE_MAIN_SITE_APP_ID"
-      // measurementId optional
+      apiKey: "AIzaSyD5qUHa2JuQ3iI7U3DrX7JDyhx76PGzhxM",
+  authDomain: "troop-248.firebaseapp.com",
+  projectId: "troop-248",
+  storageBucket: "troop-248.firebasestorage.app",
+  messagingSenderId: "925363875752",
+  appId: "1:925363875752:web:0b001c1a7a09fb8232f79d",
+  measurementId: "G-NY75GX5TBH"
     };
 
     const app = initializeApp(firebaseConfig);
